--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <title>ﾀｲﾄﾙ</title>
   </head>
   <body>
-    Hello,world!
+    <strong style="color: turquoise;">神</strong>
   </body>
+</html>
